--- a/app/View/admin/exam/home.html
+++ b/app/View/admin/exam/home.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
-<html>
+<div class="container">
+    <div style="margin-bottom: 20%;"></div>
 
-<head>
-    <title>exam home</title>
-</head>
+    <div class="row">
+        <div class="col-md-4">
+            <div id="linkcard" onclick="location.href='pageurl.html';">
+                <p id="alinkcard">انشاء</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div id="linkcard" onclick="location.href='pageurl.html';">
+                <p id="alinkcard">تخصيص</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div id="linkcard" onclick="location.href='pageurl.html';">
+                <p id="alinkcard">نتائج</p>
+            </div>
+        </div>
 
-<body>
-    <div>foobar</div>
-</body>
+    </div>
 
-</html>
+
+</div>
