--- a/app/View/admin/home.html
+++ b/app/View/admin/home.html
@@ -1,12 +1,48 @@
-<!DOCTYPE html>
-<html>
+<div class="container">
+    <div style="margin-bottom: 20%;"></div>
+    <div class="row">
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/levels';">
+                <p id="alinkcard">المراحل</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/groups';">
+                <p id="alinkcard">المجموعات</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/secretary';">
+                <p id="alinkcard">المشرفين</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/student';">
+                <p id="alinkcard">الطلاب</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/examsBank';">
+                <p id="alinkcard">بنك الاسالة</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/exam/home';">
+                <p id="alinkcard">الامتحانات</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/membership';">
+                <p id="alinkcard">الشهر</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div id="linkcard" onclick="location.href='/admin/absent';">
+                <p id="alinkcard">الغياب</p>
+            </div>
+        </div>
 
-<head>
-    <title>admin home</title>
-</head>
+    </div>
 
-<body>
-    <div>foobar</div>
-</body>
 
-</html>
+</div>
