--- a/app/View/admin/levels/add.html
+++ b/app/View/admin/levels/add.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html>
+<div class="container">
+    <div class=" m-3">
+        <form action="{{form}}" method="POST" autocomplete="off">
+            <div class="form-group">
+                <label for="formGroupExampleInput" class="float-right">اضافة مرحلة</label>
+                <input required class="form-control form-control-lg" name="name" type="text" id="formGroupExampleInput" placeholder="اسم المرحلة - مثال - الصف الاول الثانوي">
+                <button type="submit" class="btn btn-primary mt-3 float-right">تأكيد</button>
+            </div>
+        </form>
+    </div>
 
-<head>
-    <title>exam add</title>
-</head>
-
-<body>
-    <div>foobar</div>
-</body>
-
-</html>
+</div>
