--- a/app/View/admin/exam/home.html
+++ b/app/View/admin/exam/home.html
@@ -4,7 +4,10 @@
     <div class="row">
         <div class="col-md-4">
             <div id="linkcard" onclick="location.href='pageurl.html';">
-                <p id="alinkcard">انشاء</p>
+                <a href="/admin/exam/add">
+                    <p id="alinkcard">انشاء</p>
+                </a>
+
             </div>
         </div>
         <div class="col-md-4">
