--- a/app/View/admin/membership/home.html
+++ b/app/View/admin/membership/home.html
@@ -1,12 +1,80 @@
-<!DOCTYPE html>
-<html>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="container">
+                <form class="text-right mt-3 mb-3" action="{{form}}" method="POST" autocomplete="off">
+                    <input type="hidden" name="students_id">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput">اسم الطالب</label>
 
-<head>
-    <title>memb home</title>
-</head>
+                        <input type="text" name="name" disabled class="form-control input-sm cheque-amt" Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputState">الشهر</label>
+                        <select id="inputState" name="month" class="form-control">
+								<option selected>1</option>
+								<option>2</option>
+								<option>3</option>
+								<option>4</option>
+								<option>5</option>
+								<option>6</option>
+								<option>7</option>
+								<option>8</option>
+								<option>9</option>
+								<option>10</option>
+								<option>11</option>
+								<option>12</option>
+							</select>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputState">المجموعة</label>
+                        <select id="inputState" name="groups_id" class="form-control">
+							{% for group in groups %}
+                
 
-<body>
-    <div>foobar</div>
-</body>
+                        <option value="{{group['id']}}">{{group['name']}}</option>
 
-</html>
+    
+                {% endfor %}
+							</select>
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">القيمة</label>
+                        <input type="text" name="month" class="form-control" id="formGroupExampleInput2" placeholder="ثمن الشهر">
+                    </div>
+                    <button type="submit" class="btn btn-primary">تأكيد</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container">
+
+    <table id="myTable" class="display nowrap text-right" style="width:100%">
+        <thead>
+            <tr>
+                <th>اسم الطالب</th>
+                <th>الشهر</th>
+                <th>المجموعة</th>
+                <th>خيارات</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                {% for student in students %}
+                <td class="cheque-amt">{{student['name']}}</td>
+                <!-- <td>{{memberships['id']['month']}}</td> -->
+                <td></td>
+                <td>{{groups[student['groups_id']-1]['name']}}</td>
+                <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+							دفع
+                        </button></td>
+                <td style="display: none;" class="students_id">{{students[membership['students_id']-1]['id']}}</td>
+            </tr>
+            {% endfor %}
+
+        </tbody>
+    </table>
+</div>
